--- a/sources/styles/app.css
+++ b/sources/styles/app.css
@@ -73,3 +73,25 @@
 .spacerOfAddBook {
     background-color: white;
 }
+.headerInfo {
+	font-size: 20px;
+	font-weight: bold;
+	padding: 5px 0 0 10px;
+}
+.infoBodyHeader {
+	font-size: 16px;
+	font-weight: bold;
+}
+.columnSettings {
+	display: inline-block;
+	padding-left: 20px;
+	vertical-align: middle;
+}
+.rowSettings {
+	display: block;
+	padding-top: 20px;
+	vertical-align: middle;
+}
+.highlight{
+	background-color:#FFAAAA;
+}
